--- a/app/src/main/res/layout/fragment_add_shoe.xml
+++ b/app/src/main/res/layout/fragment_add_shoe.xml
@@ -73,7 +73,6 @@
             android:ems="10"
             android:importantForAutofill="no"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/barrier3"
             app:layout_constraintTop_toTopOf="parent"
@@ -88,9 +87,7 @@
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintStart_toEndOf="@+id/barrier3"
             app:layout_constraintTop_toBottomOf="@+id/shoeName"
             tools:ignore="TouchTargetSizeCheck" />
@@ -105,7 +102,6 @@
             android:ems="10"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintStart_toEndOf="@+id/barrier3"
             app:layout_constraintTop_toBottomOf="@+id/brandName"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -121,7 +117,6 @@
             android:gravity="start|top"
             android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintStart_toEndOf="@+id/barrier3"
             app:layout_constraintTop_toBottomOf="@+id/shoeSize"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
@@ -132,6 +127,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_save"
+            android:enabled="false"
             app:layout_constraintStart_toEndOf="@+id/barrier3"
             app:layout_constraintBaseline_toBaselineOf="@+id/button3"
             tools:layout_editor_absoluteX="121dp" />
@@ -143,6 +139,7 @@
             android:layout_marginStart="92dp"
             android:layout_marginTop="60dp"
             android:text="@string/button_cancel"
+            android:onClick="@{() -> addShowViewModel.cancel()}"
             app:layout_constraintStart_toEndOf="@+id/button2"
             app:layout_constraintTop_toBottomOf="@+id/shoeDescription" />
 
