--- a/app/src/main/res/layout/fragment_add_shoe.xml
+++ b/app/src/main/res/layout/fragment_add_shoe.xml
@@ -6,9 +6,15 @@
 
     <data>
         <variable
+            name="data"
+            type="com.tanvir.shoestore.ui.shoelist.Shoes" />
+        <variable
             name="addShowViewModel"
             type="com.tanvir.shoestore.ui.shoelist.ShoeListViewModel" />
     </data>
+
+    <!--    layout contains some text and edittext which I wanted to constraintBaseline -->
+    <!--    with each pair which can be easily achived by constraintLayout-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,9 +23,9 @@
 
         <TextView
             android:id="@+id/textView7"
+            style="@style/normal_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/normal_text"
             android:layout_marginStart="16dp"
             android:text="@string/shoe_name"
             app:layout_constraintBaseline_toBaselineOf="@+id/shoeName"
@@ -27,9 +33,9 @@
 
         <TextView
             android:id="@+id/textView8"
+            style="@style/normal_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/normal_text"
             android:layout_marginStart="16dp"
             android:text="@string/company_name"
             app:layout_constraintBaseline_toBaselineOf="@+id/brandName"
@@ -37,9 +43,9 @@
 
         <TextView
             android:id="@+id/textView9"
+            style="@style/normal_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/normal_text"
             android:layout_marginStart="16dp"
             android:text="@string/shoe_size"
             app:layout_constraintBaseline_toBaselineOf="@+id/shoeSize"
@@ -73,6 +79,7 @@
             android:ems="10"
             android:importantForAutofill="no"
             android:inputType="textPersonName"
+            android:text="@={addShowViewModel.editTextName}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/barrier3"
             app:layout_constraintTop_toTopOf="parent"
@@ -87,6 +94,7 @@
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:text="@={addShowViewModel.editTextBrand}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/barrier3"
             app:layout_constraintTop_toBottomOf="@+id/shoeName"
@@ -101,6 +109,7 @@
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
+            android:text="@={addShowViewModel.editTextSize}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/barrier3"
             app:layout_constraintTop_toBottomOf="@+id/brandName"
@@ -115,21 +124,22 @@
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:gravity="start|top"
+            android:importantForAutofill="no"
             android:inputType="textMultiLine"
+            android:text="@={addShowViewModel.editTextDescription}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/barrier3"
             app:layout_constraintTop_toBottomOf="@+id/shoeSize"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
-            android:importantForAutofill="no" />
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_save"
-            android:enabled="false"
-            app:layout_constraintStart_toEndOf="@+id/barrier3"
+            android:onClick="@{() -> addShowViewModel.saveShoesDetails()}"
             app:layout_constraintBaseline_toBaselineOf="@+id/button3"
+            app:layout_constraintStart_toEndOf="@+id/barrier3"
             tools:layout_editor_absoluteX="121dp" />
 
         <Button
@@ -138,8 +148,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="92dp"
             android:layout_marginTop="60dp"
-            android:text="@string/button_cancel"
             android:onClick="@{() -> addShowViewModel.cancel()}"
+            android:text="@string/button_cancel"
             app:layout_constraintStart_toEndOf="@+id/button2"
             app:layout_constraintTop_toBottomOf="@+id/shoeDescription" />
 
