--- a/app/src/main/res/layout/shoe_list_fragment.xml
+++ b/app/src/main/res/layout/shoe_list_fragment.xml
@@ -4,6 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.tanvir.shoestore.ui.shoelist.ShoeListViewModel" />
+    </data>
+
+    <!--    because of the floating action button I was hard to just place it in-->
+    <!--    a linearLayout-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -38,6 +46,7 @@
             android:layout_marginBottom="50dp"
             android:clickable="true"
             android:focusable="true"
+            android:onClick="@{() -> viewmodel.addNewShoes()}"
             android:src="@drawable/fav_add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
